Update to make pretty

--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "1.0.2",
   "description": "",
   "main": "index.js",
-  "bin": "index.js",
+  "bin": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "prettyjson": "^1.2.1"
+  }
 }
