--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/phocks/phocks.git"
+  },
   "keywords": [],
-  "author": "",
+  "author": "Joshua Byrd",
   "license": "ISC",
   "dependencies": {
     "prettyjson": "^1.2.1"
